# pycas-sso

./: .gitignore  .readthedocs.yml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  tox.ini
.github/workflows/: release.yml  tests.yml
docs/: requirements.txt
docs/source/: changelog.md  conf.py  contributing.md  index.md  quickstart.md
docs/source/api/: index.md
docs/source/example/: flask.md  index.md
pycas_sso/: cas.py  errors.py  schemas.py  xml.py
pycas_sso/clients/: aiohttp.py  core.py  httpx.py  requests.py
tests/: fixtures.py  mocks.py  test_cas.py
