[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycas-sso"
version = "0.1.0-1"
description = "Python client for the CAS protocol, compatible with several HTTP clients with asynchronous support."
keywords = ["cas", "sso", "central authentication service", "authentication", "cas protocol", "security"]
readme = "README.md"
requires-python = ">=3.10"

authors = [ 
    { name = "Eryux", email = "nicolas.cnd@outlook.com" } 
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",

  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries",
  "Topic :: Security",
]

dependencies = [
    "lxml"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-httpserver"
]

httpx = [
    "httpx"
]

requests = [
    "requests"
]

aiohttp = [
    "aiohttp"
]

[project.urls]
Documentation = "https://pycas-sso.readthedocs.io/en/latest/"
Repository = "https://github.com/unguestapp/pycas-sso"
Changelog = "https://github.com/unguestapp/pycas-sso/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov=pycas_sso --cov-report=term-missing"
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["pycas_sso"]
